force-app/main/default/objects/Grant_Budget__c/Grant_Budget__c.object-meta.xml
<CustomObject>
    <label>Grant Budget</label>
    <nameField>
        <displayFormat>GB-{0000}</displayFormat>
        <label>Grant Budget Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>