force-app/main/default/objects/Grant_Budget__c/fields/Amount_Applied_from_Sentara_Grant__c.field-meta.xml
<CustomField>
    <fullName>Amount_Applied_from_Sentara_Grant__c</fullName>
    <label>Amount Applied from Sentara Grant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>