force-app/main/default/objects/Grant_Budget__c/fields/Budget_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Budget_Line_Item__c</fullName>
    <label>Budget Line Item</label>
    <type>TextArea</type>
</CustomField>