force-app/main/default/objects/Grant_Budget__c/fields/Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>Expense_Category__c</fullName>
    <label>Expense Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other Direct Expenses</fullName>
            </value>
            <value>
                <fullName>Administrative Expenses %28not to exceed 15%25 of grant request%29</fullName>
            </value>
            <value>
                <fullName>Direct - Project Personnel Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>