force-app/main/default/objects/Grant_Budget__c/fields/GBSF_External_ID__c.field-meta.xml
<CustomField>
    <fullName>GBSF_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>GBSF External ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>