force-app/main/default/objects/Grant_Budget__c/fields/Line_funding_source__c.field-meta.xml
<CustomField>
    <fullName>Line_funding_source__c</fullName>
    <description>Funding source for line item</description>
    <label>Line Funding Source</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>