force-app/main/default/objects/Grant_Budget__c/fields/Project_Budget__c.field-meta.xml
<CustomField>
    <fullName>Project_Budget__c</fullName>
    <label>Project Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>