force-app/main/default/objects/Grant_Budget__c/fields/SFx_GrantBudget_Id__c.field-meta.xml
<CustomField>
    <fullName>SFx_GrantBudget_Id__c</fullName>
    <externalId>true</externalId>
    <label>SFx_GrantBudget_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>