force-app/main/default/objects/Grant_Budget__c/fields/Variance_Budget_to_Actual_dollar__c.field-meta.xml
<CustomField>
    <fullName>Variance_Budget_to_Actual_dollar__c</fullName>
    <formula>Project_Budget__c  -  Amount_Applied_from_Sentara_Grant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The difference between to the line item total project and the actual dollar amount from sentara.</inlineHelpText>
    <label>Variance Budget to Actual dollar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>