force-app/main/default/objects/Grant_Budget__c/fields/Variance_Budget_to_Actual_percentage__c.field-meta.xml
<CustomField>
    <fullName>Variance_Budget_to_Actual_percentage__c</fullName>
    <formula>Amount_Applied_from_Sentara_Grant__c/Project_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percentage of the line item total project to the actual dollar amount from Sentara.</inlineHelpText>
    <label>Variance Budget to Actual percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>