force-app/main/default/objects/Grant_Budget__c/listViews/Test.listView-meta.xml
<ListView>
    <fullName>Test</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Expense_Category__c</columns>
    <columns>rowIndex__c</columns>
    <filterScope>Everything</filterScope>
    <label>Test</label>
</ListView>